Revert "Merge branch 'master' into min-ho"
This reverts commit 49fd160e136b079d737731c07e0cc88757866202, reversing
changes made to 11f308ae0822a2c937ac7d067db690e75636e39f.